# Particula

./: LICENSE.txt  README.md  README_old.txt
Controller/: ParticulaApp.cpp  ParticulaApp.h  base_controller.cpp  base_controller.h  preferences.cpp  preferences.h  world_controller.cpp  world_controller.h
H/: Hbtree.h  Hvec3D.h
Model/: adtree.cpp  adtree.h  barrier.c  barrier.h  datatypes.h  diagnostics.cpp  diagnostics.h  distributor.cpp  distributor.h  force.cpp  force.h  octtree.cpp  octtree.h  ppforce.cpp  ppforce.h  world.cpp  world.h
Projects/: CMakeLists.txt  Particula.icns
Projects/Mac/: Info.plist
View/: DistributePanel.cpp  DistributePanel.h  View2D.cpp  View2D.h  View3D.cpp  View3D.h
